syntax = "proto3";

package ad;
option go_package = "lesson9/homework/internal/ports/grpc";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

service AdService {
  rpc CreateAd(CreateAdRequest) returns (AdResponse) {}
  rpc ChangeAdStatus(ChangeAdStatusRequest) returns (AdResponse) {}
  rpc UpdateAd(UpdateAdRequest) returns (AdResponse) {}
  rpc ListAdsWithFilter(GetListAdsWithFilterRequest) returns (ListAdResponse) {}
  rpc ListAdsByTitle(GetListAdsByTitleRequest) returns (ListAdResponse) {}
  rpc CreateUser(CreateUserRequest) returns (UserResponse) {}
  rpc UpdateUser(UpdateUserRequest) returns (UserResponse) {}
  rpc GetUser(GetUserRequest) returns (UserResponse) {}
  rpc DeleteUser(DeleteUserRequest) returns (google.protobuf.Empty) {}
  rpc GetAd(GetAdRequest) returns (AdResponse) {}
  rpc DeleteAd(DeleteAdRequest) returns (google.protobuf.Empty) {}
}

message GetAdRequest {
  int64 ad_id = 1;
}

message GetListAdsByTitleRequest {
  string title = 1;
}

message GetListAdsWithFilterRequest {
  optional int64 user_id  = 1;
  optional bool published  = 2;
  optional google.protobuf.Timestamp date_creating = 3;
}

message CreateAdRequest {
  string title = 1;
  string text = 2;
  int64 user_id = 3;
}

message ChangeAdStatusRequest {
  int64 ad_id = 1;
  int64 user_id = 2;
  bool published = 3;
}

message UpdateUserRequest {
  int64 user_id = 1;
  string nickname = 2;
  string email = 3;
}

message UpdateAdRequest {
  int64 ad_id = 1;
  string title = 2;
  string text = 3;
  int64 user_id = 4;
}

message AdResponse {
  int64 id = 1;
  string title = 2;
  string text = 3;
  int64 user_id = 4;
  bool published = 5;
  google.protobuf.Timestamp date_update = 6;
  google.protobuf.Timestamp date_creating = 7;
}

message ListAdResponse {
  repeated AdResponse list = 1;
}

message CreateUserRequest {
  string nickname = 1;
  string email = 2;
}

message UserResponse {
  int64 id = 1;
  string nickname = 2;
  string email = 3;
}

message GetUserRequest {
  int64 id = 1;
}

message DeleteUserRequest {
  int64 id = 1;
}

message DeleteAdRequest {
  int64 ad_id = 1;
  int64 user_id = 2;
}